# Fashion_SegCBIR

./: .gitignore  README.md  app.py  eval.py  pyproject.toml
evaluation/: metrics.py  run_eval.py  run_predict.py
logs/: cbir_metrics_summary.json  predictions_all.json
src/model/: cross_encoder_model.py  huggingface_hub_model.py  open_ai_model.py  open_clip_model.py
src/node/: image_encoder.py  refine_query_image.py  refine_query_text.py  rerank.py  retrieval.py  rewrite_query.py  segment_image.py  text_encoder.py
src/static/: main.html
src/utils/: FashionAI.py  config.py  load_image.py  load_models.py
